<?xml version="1.0"?>
<package>
  <name>ros_ground_station</name>
  <version>0.0.0</version>
  <description>Ground station nodes to set the communication between the drone and the ground station in an Agricultural Use-Case setup </description>
  <maintainer email="adam@seewald.email">Adam Seewald</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>vision_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>vision_msgs</run_depend>

</package>
